<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">魔力阅读</string>
    <string name="title_activity_reader">魔力阅读</string>
    <string name="title_activity_main">书架</string>
    <string name="title_activity_abount">关于</string>
    <string name="title_activity_file">导入图书</string>
    <string name="path_back">上一级</string>
    <string name="book_open">打开</string>
    <string name="book_delete">删除</string>
    <string name="book_delete_conform_title">确定删除[%s]吗?</string>
    <string name="book_delete_source_file">删除源文件?</string>
    <string name="previous_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="menu_chapter">查看目录</string>
    <string name="menu_bright">亮度设置</string>
    <string name="menu_pagestyle">翻页方式</string>
    <string name="menu_font">阅读设置</string>
    <string name="eye_protection">护眼模式</string>
    <string name="bright_system">系统亮度</string>
    <string name="font_size">字号:</string>
    <string name="already_first_page">已经是第一页</string>
    <string name="already_last_page">已经是最后一页</string>
    <string name="error_file_not_exist">文件不存在！</string>
    <string name="error_load_book">加载图书失败！</string>
    <string name="page_style_name_none">无</string>
    <string name="page_style_name_simulation">仿真</string>
    <string name="page_style_name_layover">覆盖</string>
    <string name="page_style_name_slide">滑动</string>
    <string name="page_style_name_ripple">波纹</string>
    <string name="page_style_name_vertical_blinds">百叶窗</string>
    <string name="theme_name_eye">护眼</string>
    <string name="theme_name_parchment">羊皮纸</string>
    <string name="theme_name_charm">夜之魅</string>
    <string name="theme_name_spirit">纸之灵</string>
    <string name="theme_name_sea">海之蓝</string>
    <string name="theme_name_bookflavor">书之味</string>
    <string name="theme_name_fine">精品书</string>
    <string name="theme_name_night1">夜间1</string>
    <string name="theme_name_night2">夜间2</string>
    <string name="theme_name_night3">夜间3</string>
    <string name="theme_name_save_power">省电</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="initialing">正在初始化，请稍候...</string>
    
    <string name="menu_about">关于我们</string>

</resources>
